Fix background-color, font-size, margins, overflow-y, height

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -11,20 +11,24 @@
     }
 
     .MenuOpen {
+        height: 100vh;
+        overflow-y: scroll;
+
         color: white;
+        background-color: rgba(0, 0, 0, 0.2);
         backdrop-filter: blur(25px);
         border-bottom: 7px solid white;
         border-left: 7px solid white;
 
         border-bottom-left-radius: 50px;
         text-align: center;
-        font-size: 32px;
+        font-size: 48px;
         font-family: Roboto, sans-serif;
 
         ul,
         li {
-            margin-left: 0;
-            padding-left: 0;
+            margin: 0;
+            padding: 0;
         }
 
         .MenuHeader {
